# lumenpdf-studio

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/ops/: lib.rs
src-tauri/src/: api.rs  compress.rs  lib.rs  main.rs  merge.rs  sign.rs  split.rs
src-tauri/src/api/: pdf.ts
src/css/: merge.module.css  sign.module.css
src/pages/: Home.tsx
src/pages/tools/: Compress.tsx  Merge.tsx  Placeholder.tsx  Split.tsx
src/pages/tools/Sign/: PadOrPreview.tsx  PdfStage.tsx  SignaturePad.tsx  index.tsx  pdf.ts  types.ts  utils.ts
src/shared/: ErrorBoundary.tsx  FileDrop.tsx  api.ts  devtools.ts  drag.ts  logger.ts  pdfStore.ts  signApi.ts  tauri-v2.ts
