[package]
name = "lumenpdf-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# 用主版本即可，避免被具体小版本坑住
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
