# src-tauri/Cargo.toml
[package]
name = "lumenpdf-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"          # ✅ 必加：前端 readBinaryFile 依赖它

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
