# src-tauri/Cargo.toml
[package]
name = "lumenpdf-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# ✅ Tauri v2：不要加不存在的 features（比如 macros）
tauri = { version = "2.8.4", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# sign.rs 用到的库
base64 = "0.22"
sha2 = "0.10"
once_cell = "1.19"
memchr = "2.7"
tempfile = "3.10"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
